- Fixed bug #22709 (crash within interbase when database unavailable)